<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="me.annaliu.justjava.MainActivity">

    <EditText
        android:id="@+id/nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/customer_name"
        android:inputType="textCapWords" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/coffee_base_price"
            android:textAllCaps="true"
            android:textColor="#666666"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/price"
            android:layout_toRightOf="@id/price"
            android:text="@string/price"
            android:textColor="#666666"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="#eeeeee"
        android:padding="5dp"
        android:text="@string/customization_opt"
        android:textAllCaps="true"
        android:textColor="#666666"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fadeScrollbars="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingStart="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milk"
                android:textAllCaps="true"
                android:textColor="#666666"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/wholeMilk"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/whole"
                        android:textColor="#666666" />

                    <RadioButton
                        android:id="@+id/skimMilk"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/skim"
                        android:textColor="#666666" />

                    <RadioButton
                        android:id="@+id/cream"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cream"
                        android:textColor="#666666" />

                    <RadioButton
                        android:id="@+id/almondMilk"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/almond"
                        android:textColor="#666666" />

                    <RadioButton
                        android:id="@+id/soyMilk"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/soy"
                        android:textColor="#666666" />

                    <RadioButton
                        android:id="@+id/noMilk"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/none"
                        android:textColor="#666666" />
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/sugar"
                android:textAllCaps="true"
                android:textColor="#666666"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingStart="10dp">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/yesSugar"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:textColor="#666666" />

                    <RadioButton
                        android:id="@+id/noSugar"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textColor="#666666" />
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/extra"
                android:textAllCaps="true"
                android:textColor="#666666"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/caramel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:text="@string/caramel"
                android:textColor="#666666"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/whipCream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:text="@string/whip_cream"
                android:textColor="#666666"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/chocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:text="@string/chocolate"
                android:textColor="#666666"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="16dp"
        android:background="#eeeeee"
        android:padding="5dp"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textColor="#666666"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:onClick="decrement"
            android:text="-" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="0"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:onClick="increment"
            android:text="+" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:onClick="Reset"
            android:text="@string/reset"
            android:textColor="#bbbbbb" />

    </LinearLayout>

<!-- TODO move reset button-->
<!-- TODO move order summary to new screen -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#eeeeee"
        android:padding="5dp"
        android:text= "@string/order_summary"
        android:textAllCaps="true"
        android:textColor="#666666"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fadeScrollbars="false">

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5sp"
            android:paddingBottom="10dp"
            android:text=" "
            android:textColor="#888888"
            android:textSize="15sp" />
    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="55dp">

        <Button
            android:id="@+id/total_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:onClick="submitOrder"
            android:text="@string/submit_order" />

    </RelativeLayout>

</LinearLayout>
